--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Barrio&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+body{
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+}
 .logo{
   width: 250px;
   height: 250px;
@@ -9,6 +14,7 @@
   display: flex;
   justify-content: center;
   height: 250px;
+  background-color: #e4e4e4;
 
   ul{
     height: 100%;
@@ -25,11 +31,14 @@
       font-family: "Barrio", serif;
       font-size: 1.5rem;
       cursor: pointer;
-
+      width: fit-content;
+      
       a{
-        text-decoration: none;
+        text-align: center;
         color: black;
         transition: all 0.3s ease;
+        padding: 4px;
+        width: fit-content;
 
         &:hover{
          font-size: 1.6rem;
@@ -37,10 +46,16 @@
       }
     }
   }
+
+
 }
 
 .sec-top-viewed{
   font-family: "Barrio", serif;
+
+  h2{
+    padding: 10px;
+  }
 }
 
 .top-viewed-posters{
@@ -48,6 +63,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 10px;
+  justify-items: center;
 
   img{
     height: 200px;
@@ -55,8 +71,29 @@
     border-radius: 6px;
     transition: all 0.3s ease;
 
+
     &:hover{
       transform: scale(1.1);
     }
+  }
+}
+
+main{
+  background-color: #e4e4e4;
+}
+
+footer{
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 10px;
+}
+
+@media (max-width: 768px){
+  .main-header{
+    flex-direction: column;
+    height: auto;
+    justify-content: center;
+    align-items: center;
   }
 }
